# git_plus_plus

./: .gitignore  Cargo.toml  README.md  document.md  userGuide.md
.github/workflow/: metrics.yml
.github/workflows/: metrics.yml  release.yml  tests.yml
backend-git/: Cargo.toml
backend-git/src/: git_repo.rs  lib.rs
cli/: Cargo.toml
cli/src/: gui.rs  main.rs
cli/tests/: functional_tests.rs
core/: Cargo.toml
core/src/: backend.rs  dispatcher.rs  lib.rs  plugins.rs  push_manager.rs  storage.rs  types.rs  version_graph.rs
docs/: class_diagram.puml
metrics_provider/: Cargo.toml
metrics_provider/src/: lib.rs
src/: main.rs
storage-file/: Cargo.toml
storage-file/src/: json_storage.rs  lib.rs
