[package]
name = "git_plus_plus"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

members = [
    "core",
    "storage-file",
    "backend-git",
    "cli",
    "metrics_provider",
]
[dependencies]
metrics_provider = { version = "0.1.0", path = "metrics_provider" }
tokio = { version = "1.0", features = ["full"] }
