[package]
name = "gpp_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# --- UX (Цвет и Диалоги) ---
colored = "2.0"
dialoguer = "0.10"
# --- GUI (Графический интерфейс) ---
eframe = "0.26.2"  # <--- ВСТАВИТЬ СЮДА
# ------------------------------

gpp_core = { path = "../core" }
backend-git = { path = "../backend-git" }
storage-file = { path = "../storage-file" }
tracing-subscriber = "0.3.22"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
walkdir = "2.4"