[package]
name = "metrics_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
google-sheets4 = "5.0.0"
yup-oauth2 = "9.0.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["webpki-tokio", "http1", "http2"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"